[package]
name = "tnum"
version = "0.1.0"
edition = "2021"
description = "Tnum (truncated number) abstract domain for static analysis of eBPF programs"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/ctc-team/Tnum-for-Rust"
license = "Apache-2.0"
rust-version = "1.65"
keywords = ["ebpf", "abstract-domain", "tnum", "solana"]
categories = ["mathematics", "no-std"]

[features]
default = []
std = []

[dependencies]

[dev-dependencies]

[profile.release]
lto = true
codegen-units = 1
